[package]
name = "pdf-rename"
version = "0.1.0"
edition = "2021" # the current version, obeying semver
authors = ["Hamze Ghalebi <ghalebi@gmail.com>"]
description = "Rename PDF files based on their content- I am testing publishing a crate to crates.io so please ignore this crate"
license = "MIT"

[dependencies]
regex = "1"

reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1.15"
ollama-rs = { version = "0.1.9", features = ["stream"] }
scraper = "0.19.0"
lazy_static = { version = "1.4.0" }
