[package]
name = "pdf-rename"
version = "0.1.1"
edition = "2021" # the current version, obeying semver
authors = ["Hamze Ghalebi <ghalebi@gmail.com>"]
description = "This script reads a list of PDF files from a specified directory and renames each file based on its content. The renaming logic uses the content of the PDF to generate a more descriptive and meaningful filename."
license = "MIT"
readme = "README.md" 
repository = "https://github.com/RustSandbox/pdfrename"

[dependencies]
regex = "1"

reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1.15"
ollama-rs = { version = "0.1.9", features = ["stream"] }
scraper = "0.19.0"
lazy_static = { version = "1.4.0" }
pdf-extract = "0.7.7"
